syntax = "proto3";

// option go_package = "../server/grpc";
option go_package = "../client/grpc";

service FileTrans {
    rpc Upload(stream UploadReq) returns (UploadRep) {}
    rpc Download(DownloadReq) returns (stream DownloadRep) {}
}

message FileMeta {
    string name = 1;
    int64 size = 2;
    string md5 = 3;
}

message UploadReq {
    bytes data = 1;
}

message UploadRep {
    bool ok = 1;
    string msg = 2;
}

message DownloadReq {
    string path = 1;
}

message DownloadRep {
    bytes data = 1;
}


